package com.g4.odontohub.equipe.domain.model;

public record ColaboradorId(Long id) {}
