package com.g4.odontohub.equipe.domain.model;

public enum FuncaoColaborador {
    AUXILIAR,
    RECEPCIONISTA
}