package com.g4.odontohub.equipe.domain.model;

public enum StatusColaborador {
    ATIVO,
    INATIVO
}